[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenarios/Memory/MemoryCanvas.gd" type="Script" id=1]
[ext_resource path="res://Scenarios/Memory/Assets/m01_mancha_ficticio.png" type="Texture" id=2]
[ext_resource path="res://Scenarios/Memory/Assets/m01_mancha_real.png" type="Texture" id=3]
[ext_resource path="res://Scenarios/Memory/Assets/m01_chest_mancha.png" type="Texture" id=4]
[ext_resource path="res://Scenarios/Memory/Assets/m01_ID_mancha.png" type="Texture" id=5]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M01/m01_BG.png" type="Texture" id=6]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Fictional/M01/m01_BG_2.png" type="Texture" id=7]
[ext_resource path="res://Scenarios/Memory/Elements/Element.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M01/ID.png" type="Texture" id=9]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M01/clown_suit.png" type="Texture" id=10]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Fictional/M01/corset.png" type="Texture" id=11]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M01/clown_wig.png" type="Texture" id=12]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Fictional/M01/fufa_wig.png" type="Texture" id=13]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M01/picture_children.png" type="Texture" id=14]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Fictional/M01/picture_ceci.png" type="Texture" id=15]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M01/coffee.png" type="Texture" id=16]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M01/chest.png" type="Texture" id=17]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Fictional/M01/monteasalvo_apply.png" type="Texture" id=18]
[ext_resource path="res://Audio/SoundObjectST.tscn" type="PackedScene" id=19]
[ext_resource path="res://Audio/AudioAssets/SFX/UI_Memory_Select.ogg" type="AudioStream" id=20]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 3

[sub_resource type="Animation" id=3]
length = 2.0
loop = true

[node name="MemoryCanvas" type="Control"]
modulate = Color( 1, 1, 1, 0.870588 )
material = SubResource( 1 )
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="spots" type="Node2D" parent="."]

[node name="m01_mancha_ficticio" type="Sprite" parent="spots"]
position = Vector2( 641.453, 359.551 )
texture = ExtResource( 2 )

[node name="m01_mancha_real" type="Sprite" parent="spots"]
position = Vector2( 636.788, 359.551 )
texture = ExtResource( 3 )

[node name="m01_chest_mancha" type="Sprite" parent="spots"]
position = Vector2( 1091.67, 521.674 )
texture = ExtResource( 4 )

[node name="m01_ID_mancha" type="Sprite" parent="spots"]
position = Vector2( 202.904, 339.723 )
texture = ExtResource( 5 )

[node name="Place" type="Sprite" parent="."]
material = SubResource( 2 )
use_parent_material = true
position = Vector2( 626, 358 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="fictionalPlace" type="Sprite" parent="."]
visible = false
position = Vector2( 625.831, 357.036 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationTest" type="AnimationPlayer" parent="."]
autoplay = "Transition"
anims/Transition = SubResource( 3 )

[node name="Elements" type="Control" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 98.0833
margin_top = 42.5644
margin_right = -108.917
margin_bottom = -92.4355
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="ID" parent="Elements" instance=ExtResource( 8 )]
margin_left = -81.9586
margin_top = 38.0948
margin_right = -81.9586
margin_bottom = 38.0948
mouse_default_cursor_shape = 2
real_item = "ID"

[node name="ID" type="TextureButton" parent="Elements/ID"]
margin_left = 113.986
margin_top = 205.66
margin_right = 270.986
margin_bottom = 313.66
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )

[node name="Costume" parent="Elements" instance=ExtResource( 8 )]
margin_left = 757.456
margin_top = 211.078
margin_right = 757.456
margin_bottom = 211.078
mouse_default_cursor_shape = 2
real_item = "Costume"
fictional_item = "Corset"

[node name="Costume" type="TextureButton" parent="Elements/Costume"]
margin_left = 1.39667
margin_top = 0.698334
margin_right = 185.397
margin_bottom = 355.698
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )

[node name="Corset" type="TextureButton" parent="Elements/Costume"]
visible = false
margin_left = 17.3493
margin_top = 11.6135
margin_right = 153.349
margin_bottom = 345.614
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )

[node name="Nariz" parent="Elements" instance=ExtResource( 8 )]
margin_left = 299.658
margin_top = 299.348
margin_right = 299.658
margin_bottom = 299.348
mouse_default_cursor_shape = 2
real_item = "Nariz"
fictional_item = "Fufa_wig"
needed_attempts = 0

[node name="Nariz" type="TextureButton" parent="Elements/Nariz"]
margin_left = 2.65369
margin_top = -5.30737
margin_right = 110.654
margin_bottom = 142.693
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )

[node name="Fufa_wig" type="TextureButton" parent="Elements/Nariz"]
visible = false
margin_left = 11.2782
margin_top = 7.96106
margin_right = 105.278
margin_bottom = 142.961
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 13 )

[node name="Hijos" parent="Elements" instance=ExtResource( 8 )]
margin_left = 325.412
margin_top = 197.113
margin_right = 325.412
margin_bottom = 197.113
mouse_default_cursor_shape = 2
real_item = "Hijos"
fictional_item = "Sola"

[node name="Hijos" type="TextureButton" parent="Elements/Hijos"]
margin_right = 87.0
margin_bottom = 60.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 14 )

[node name="Sola" type="TextureButton" parent="Elements/Hijos"]
visible = false
margin_left = 1.05133
margin_top = 0.163083
margin_right = 88.0514
margin_bottom = 60.1631
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 15 )

[node name="Exesposo" parent="Elements" instance=ExtResource( 8 )]
margin_left = 617.684
margin_top = 354.65
margin_right = 617.684
margin_bottom = 354.65
mouse_default_cursor_shape = 2
real_item = "Exesposo"

[node name="Exesposo" type="TextureButton" parent="Elements/Exesposo"]
margin_right = 71.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 16 )

[node name="Cofre" parent="Elements" instance=ExtResource( 8 )]
margin_left = 915.529
margin_top = 410.824
margin_right = 915.529
margin_bottom = 410.824
mouse_default_cursor_shape = 2
real_item = "Cofre"
fictional_item = "Cartel"
needed_attempts = 0

[node name="Cofre" type="TextureButton" parent="Elements/Cofre"]
margin_right = 158.0
margin_bottom = 144.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 17 )

[node name="Cartel" type="TextureButton" parent="Elements/Cofre"]
visible = false
margin_left = -260.223
margin_top = -90.6166
margin_right = -174.223
margin_bottom = -24.6166
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 18 )

[node name="SFX_Select" parent="." instance=ExtResource( 19 )]
stream = ExtResource( 20 )

