[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenarios/Memory/MemoryCanvas.gd" type="Script" id=1]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/mancha4.png" type="Texture" id=2]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/m02_BG.png" type="Texture" id=3]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/window_1.png" type="Texture" id=4]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/phone.png" type="Texture" id=5]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/newspaper.png" type="Texture" id=6]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/poster_1.png" type="Texture" id=7]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/door_tag.png" type="Texture" id=8]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/cockroach.png" type="Texture" id=9]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/room_key.png" type="Texture" id=10]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/tv_1.png" type="Texture" id=11]
[ext_resource path="res://Scenarios/Memory/Elements/Assets/Real/M02/luggage.png" type="Texture" id=12]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Window"
length = 2.0
loop = true

[node name="MemoryCanvas" type="Control"]
modulate = Color( 1, 1, 1, 0.870588 )
material = SubResource( 1 )
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Spot" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.843137 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Place" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 664.587, 293.972 )
scale = Vector2( 0.826759, 0.826759 )
texture = ExtResource( 3 )

[node name="AnimationTest" type="AnimationPlayer" parent="."]
autoplay = "Window"
anims/Window = SubResource( 2 )

[node name="Window" type="TextureRect" parent="."]
margin_left = 491.095
margin_top = 45.6089
margin_right = 804.095
margin_bottom = 265.609
texture = ExtResource( 4 )

[node name="Elements" type="Control" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 98.0833
margin_top = 42.5644
margin_right = -108.917
margin_bottom = -92.4355

[node name="WindowLeft" type="TextureButton" parent="Elements"]
margin_left = 392.0
margin_right = 568.0
margin_bottom = 221.0
mouse_default_cursor_shape = 2

[node name="Phone" type="TextureButton" parent="Elements"]
margin_left = 222.3
margin_top = 253.65
margin_right = 338.3
margin_bottom = 362.65
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )

[node name="Newspaper" type="TextureButton" parent="Elements"]
margin_left = 319.2
margin_top = 273.6
margin_right = 506.2
margin_bottom = 374.6
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )

[node name="Poster" type="TextureButton" parent="Elements"]
margin_left = 229.9
margin_top = 43.7
margin_right = 375.9
margin_bottom = 232.7
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )

[node name="WindowRight" type="TextureButton" parent="Elements"]
margin_left = 578.0
margin_top = 2.0
margin_right = 708.0
margin_bottom = 224.0
mouse_default_cursor_shape = 2

[node name="DoorTag" type="TextureButton" parent="Elements"]
margin_left = 849.56
margin_top = 158.648
margin_right = 894.56
margin_bottom = 258.648
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )

[node name="Cockroach" type="TextureButton" parent="Elements"]
margin_left = 751.375
margin_top = 152.239
margin_right = 995.375
margin_bottom = 474.239
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )

[node name="RoomKey" type="TextureButton" parent="Elements"]
margin_left = 708.783
margin_top = 75.8305
margin_right = 837.783
margin_bottom = 160.83
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )

[node name="Tv" type="TextureButton" parent="Elements"]
margin_left = 579.562
margin_top = 62.6762
margin_right = 802.562
margin_bottom = 299.676
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )

[node name="Luggage" type="TextureButton" parent="Elements"]
margin_left = 565.634
margin_top = 270.823
margin_right = 720.634
margin_bottom = 484.823
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )

